--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- This is your page's title! It's what is shown on Google and in the tab at the top of the screen. -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="./assets/styles.css" rel="stylesheet" /> <!-- you can edit this file and include your own styles! -->
+    <link href="./assets/css/styles.css" rel="stylesheet" /> <!-- you can edit this file and include your own styles! -->
     
     <!-- This is some metadata! It allows us to specify useful things, such as keywords and your website's description. -->
     <meta charset="UTF-8">
@@ -17,20 +17,22 @@
 
 </head>
 <body>
-
+    <!-- This is your Navbar! It shows links at the top of the page. -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">❗️ Your website's name</a>
+
+          <!-- This is some Bootstrap magic! ✨ It automagically minimises your navbar on mobile, and this button lets you open it again!-->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">❗ LINK 1</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="/">❗ LINK 2</a>
               </li>
               
             </ul>
@@ -39,7 +41,68 @@
         </div>
       </nav>
 
+    <!-- This is a container! It automatically pushes your content in from the sides! 🎉 -->
+    <div class="container">
+      <h1>❗️ This is an example website!</h1>
+
+       <!-- This is an example two column layout! It's response too! -->
+       <div class="row">
+        <div class="col-12 col-lg-8">
+
+            <!-- Here's an example carousell! It displays multiple images! You can include your own! -->
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <!-- ❗️ You should swap these to be your own images! -->
+              <div class="carousel-inner">
+                  <div class="carousel-item active">
+                      <img src="./assets/images/doggos.png" class="d-block w-100" alt="❗️ Add alt text for accessiblity reasons!">
+                  </div>
+                  <div class="carousel-item">
+                      <img src="./assets/images/beach.png" class="d-block w-100" alt="❗️ Add alt text for accessiblity reasons!">
+                  </div>
+                  <div class="carousel-item">
+                      <img src="./assets/images/butterfly.png" class="d-block w-100" alt="❗️ Add alt text for accessiblity reasons!">
+                  </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+              </button>
+          </div>
+
+            <!-- These are placeholder paragraphs! -->
+            <p>❗️ The cab arrived late. The inside was in as bad of shape as the outside which was concerning, and it didn't appear that it had been cleaned in months. The green tree air-freshener hanging from the rearview mirror was either exhausted of its scent or not strong enough to overcome the other odors emitting from the cab. The correct decision, in this case, was to get the hell out of it and to call another cab, but she was late and didn't have a choice.</p>
+            <p>❗️ He heard the loud impact before he ever saw the result. It had been so loud that it had actually made him jump back in his seat. As soon as he recovered from the surprise, he saw the crack in the windshield. It seemed to be an analogy of the current condition of his life.</p>
+            <p>❗️ All he could think about was how it would all end. There was still a bit of uncertainty in the equation, but the basics were there for anyone to see. No matter how much he tried to see the positive, it wasn't anywhere to be seen. The end was coming and it wasn't going to be pretty.</p>
+            <p>❗ Dave found joy in the daily routine of life. He awoke at the same time, ate the same breakfast and drove the same commute. He worked at a job that never seemed to change and he got home at 6 pm sharp every night. It was who he had been for the last ten years and he had no idea that was all about to change.</p>
+        </div>
+        <div class="col-12 col-lg-4">
+
+          <!-- This is example card! You include one for you and your team mates! -->
+          <div class="card">
+              <img src="./assets/images/charlie.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">❗️ You could include some info about who are in your sidebar! In this example, this is famous charlie Brown.</p>
+              </div>
+          </div>
+          <br />
+          <!-- You might to include some links in your sidebar too! -->
+          <ul class="list-group">
+              <li class="list-group-item"><a href="https://en.wikipedia.org/wiki/Snoopy">Know about Snoopy</a></li>
+              <li class="list-group-item"><a href="https://init.mlh.io">Check out INIT</a></li>
+              <li class="list-group-item"><a href="https://github.com/Debayan-Sen/mlh-bootstarp-starter-kit">Visit the GitHub Repo</a></li>
+          </ul>
+      </div>
+      </div>
+    </div>
+
     <!-- This is Bootstrap's JavaScript! Including it is what makes our website's interactive stuff work! -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+     <!-- You might want to include your own scripts too! We've included an example file with one in here! -->
+     <script src="./assets/js/scripts.js"></script>
 
 </body>
